# notion2md

./: .gitignore  README.md  gfm-raw_html  output_md.md  pyproject.toml  test.py
notion2md/: main.py
output/: Systems Neuroscience 449f667c736f4c0990fa7bb7c6e26b0e.md
output/Systems Neuroscience 449f667c736f4c0990fa7bb7c6e26b0e/Lecture Notes b6ba018091014e629e12fbefc3b91f84/: Auditory System Paper 30cbef4fae2a42198397ac1f51ade69a.md  Somatosensory System Paper 316d1410055f45bf958a77c187a2fed2.md  Visual System 998d35fbe365470a816f64cf270b3da1.md
tests/md/: out.md  output.md
